resourcesを読み込んでビルドする

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,8 @@ target_link_libraries(
 	SfmlWithCMake
 	sfml-graphics
 )
+
+add_custom_command(
+	TARGET SfmlWithCMake POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_SOURCE_DIR}/resources $<TARGET_FILE_DIR:SfmlWithCMake>/resources
+)
